mobile responsive spacing correction

--- a/assets/css/home4-style.css
+++ b/assets/css/home4-style.css
@@ -842,13 +842,55 @@ p {
   }
 }
 
-@media (min-width: 300px) and (max-width: 90px) {
+@media (min-width: 300px) and (max-width: 900px) {
   .navbar .logo {
-    padding: 1px 24px;
+    padding: 1px 22px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 10px;
     height: 40px;
     width: 80px;
+  }
+
+  .header-mp {
+    padding: 80px 0 10px;
+  }
+
+  .main-marq {
+    margin-bottom: 30px;
+  }
+
+  #work {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  #service {
+    padding-top: 40px;
+    padding-bottom: 90px;
+  }
+
+  #testi {
+    padding-top: 40px;
+    padding-bottom: 90px;
+  }
+
+  .brands-mp .section-padding {
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+
+  .box-dark .section-padding {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+
+  #footer1 {
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+
+  .footer-mp .footer-logo {
+    margin-top: 30px;
   }
 }
 
